--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -60,6 +60,15 @@
     font-size: 16px;
 }
 
+@media (max-width: 749px) {
+    .button.md {
+        --cut-size: var(--cut-size-md);
+        height: 38px;
+        padding: 0 22px;
+        font-size: 14px;
+}
+}
+
 
 /* Sizes */
 /* Size small */
@@ -76,6 +85,14 @@
 
     &:hover .button-corner {
         transform: scale(1.5);
+    }
+}
+
+@media (max-width: 1124px) {
+    .button.sm {
+        min-width: 40px;
+        min-height: 34px;
+        padding: 0 16px;     
     }
 }
 
@@ -99,10 +116,10 @@
 @media (min-width: 749px) and (max-width: 1124px) {
     .button.lg {
         --cut-size: var(--cut-size-md);
-        height: 48px;
-        padding: 0 24px;
-        font-size: 18px;
-        min-width: 180px;
+        height: 42px;
+        padding: 0 20px;
+        font-size: 16px;
+        min-width: 140px;
 
         & .button-corner {
             width: 17px;
@@ -472,7 +489,6 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .dropdown-button__options {
@@ -505,7 +521,7 @@
 
 }
   
-  .dropdown-button__option {
+.dropdown-button__option {
     padding: 8px 16px; 
     text-align: center;
     font-size: 14px; 
@@ -516,7 +532,7 @@
     font-weight: bold;
     color: #275880; 
     background-color: white; 
-  }
+}
 
   .dropdown-button__option:first-of-type {
     margin-top: 6px;
@@ -533,4 +549,14 @@
   .dropdown-icon {
     margin-left: 10px;
   }
+
+  .dropdown-button__options.static-position {
+  position: static;
+  border: none;
+  background: transparent;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
