--- a/src/components/collectionAll/collection-all.css
+++ b/src/components/collectionAll/collection-all.css
@@ -14,7 +14,7 @@ html {
 
 @media (min-width: 750px) and (max-width: 1124px) {
     .collection-container {
-        gap: 30px;
+        gap: 8rem;
     }
 }
 
@@ -23,6 +23,12 @@ html {
         gap: 20px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 550px) and (max-width: 748px) {
+    .collection-container {
+        gap: 7rem;
     }
 }
 
@@ -75,6 +81,7 @@ html {
 
 @media (max-width: 1124px) {
     .collection-page__buttons {
+        position: unset;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -120,7 +127,7 @@ html {
 
    @media (max-width: 1124px) {
         .card-container {
-           width: 120px; 
+           /* width: 120px;  */
            height: 147px;
         }
     }
