--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -65,7 +65,6 @@ nav a.active {
     display: block;
     width: 40px;
     height: auto;
-    padding-left: 46px;
   }
 
   .header-content {
@@ -75,10 +74,6 @@ nav a.active {
   .img-rupia {
     width: 20px;
     height: 20px;
-  }
-
-  .user-money {
-    padding-right: 46px;
   }
 
   .user-money p  {
@@ -105,6 +100,10 @@ nav a.active {
     z-index: 1000;
     gap: 0;
     height: 42px;
+  }
+
+  html {
+    padding-bottom: 82px;
   }
 }
 
