--- a/src/components/searchBar/search-bar.css
+++ b/src/components/searchBar/search-bar.css
@@ -51,7 +51,8 @@
         .search-bar {
             justify-content: center;
             height: 34px;
-            width: 80px;
+            min-width: 80px;
+
     }
 }
 
