--- a/src/components/collectionAll/collection-all.css
+++ b/src/components/collectionAll/collection-all.css
@@ -20,9 +20,11 @@ html {
 
 @media (max-width: 749px) {
     .collection-container {
-        gap: 20px;
+        gap: 10px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        width: fit-content;
+        margin: 0 auto;
     }
 }
 
