--- a/src/components/hyrule-card/hyruleCard.css
+++ b/src/components/hyrule-card/hyruleCard.css
@@ -68,8 +68,9 @@
 
 .hyrule-card__icon {
     padding-left: 0.2rem;
-    width: 1.4rem;
+    width: 1rem;
     height: auto;
+    margin-bottom: -0;
 }
 
 .hyrule-card__header .h2 {
