--- a/src/components/modalCard/modal-card.css
+++ b/src/components/modalCard/modal-card.css
@@ -16,6 +16,7 @@
   display: flex;
   align-items: center;
   padding: 16px;
+  gap: 2.4rem;
 }
 
 .modal-content h2 {
@@ -29,6 +30,11 @@
 }
 
 @media (max-width: 1124px) {
+
+  body.modal-open .header-nav {
+    display: none !important;
+  }
+
   .modal-description {
     font-size: 12px;
   }
@@ -36,7 +42,7 @@
 
 .modal-content__text-btn > h1 {
   font-size: 44px;
-  color: white;
+  color: var(--line-color);
 }
 
 @media (max-width: 1124px) {
@@ -44,8 +50,6 @@
     font-size: 34px;
   }
 }
-
-
 
 .card-container-modal {
   background-color: #0f213f;
@@ -72,6 +76,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  max-width: 50rem;
 }
 
 .zoomed-card-overlay {
@@ -98,4 +103,72 @@
 
 .zoomed-card-content .hyrule-card__border.card--xl {
   transform: scale(2.5);
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.modal-close-button svg {
+  opacity: 0.6;
+}
+.modal-close-button:hover svg {
+  height: 30px;
+  width: auto;
+  opacity: 1;
+  transition: 0.3 ease-in-out;
+}
+
+/* Responsive */
+
+@media (max-width: 748px) {
+  .modal-content {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    text-align: center;
+  }
+
+  .modal-content__text-btn {
+    margin-top: 2rem;
+    gap: 12px;
+  }
+
+  .card-container-modal .hyrule-card__border {
+    margin-top: 6rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .modal-content__text-btn > h1 {
+    font-size: 30px;
+  }
+
+  .card {
+    width: 95%;
+    height: 95%;
+  }
+
+  .modal-content__btn {
+    padding-top: 12px;
+    gap: 16px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .modal-content__btn .button {
+    width: 50%;
+  }
+
+  .modal-description h2 {
+    justify-content: center;
+  }
+  .modal-description {
+    padding: 0;
+  }
+
 }
