--- a/src/components/store-opening/StoreOpening.css
+++ b/src/components/store-opening/StoreOpening.css
@@ -38,6 +38,7 @@
     gap: 8rem;
     flex-wrap: wrap;
     justify-content: center;
+    overflow: visible;
 }
 
 .hyrule-cards-container__loading-info {
@@ -74,40 +75,71 @@
     color:#ffffff;
 }
 
+.hyrule-card {
+  scroll-snap-align: center;
+  transition: transform 0.3s ease;
+}
+
+
+
+.hyrule-cards-container.dragging {
+  cursor: grabbing;
+  user-select: none;
+}
+
 /* Responsive */
 
 @media (max-width: 990px) {
-    .store-opening {
-        margin-inline: 0; 
-    }
+  .store-opening {
+    margin-inline: 0;
+    user-select: none;
+  }
 
-    .hyrule-cards-wrapper {
-        width: 100vw; 
-        overflow-x: auto;
-        padding: 0 1rem;
-        cursor: grabbing;
-        justify-content: unset;
-        scrollbar-width: none;
-    }
+  .hyrule-cards-wrapper {
+    width: 100vw;
+    overflow: hidden; 
+    padding: 0;
+    scroll-snap-align: center;
+  }
 
-    .hyrule-cards-container {
-        display: flex;
-        overflow-x: auto;
-        scroll-snap-type: x mandatory;
-        padding: 10px 0;
-        width: 100%;
-        gap: 4rem;
-        -webkit-overflow-scrolling: touch;
-        touch-action: pan-x;
-        user-select: none;
-        flex-shrink: 0;
-        width: max-content; 
-        scroll-padding-inline: 1rem;
-    }
+  .hyrule-cards-container {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto; /* el scroll horizontal ocurre aquí */
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    touch-action: pan-x;
+    gap: 7rem;
+    justify-content: unset;
+    padding: 3rem 7rem;
+    width: 100%;
+    box-sizing: border-box;
+    cursor: grab; 
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    transition: scroll-snap-type 0.3s ease;
+  }
 
-    .hyrule-cards__textbox {
-        margin-top: 4rem;
-        text-align: center;
-    }
+  .hyrule-cards-container.dragging {
+    cursor: grabbing;
+    user-select: none;
+    scroll-behavior: auto;
+    scroll-snap-type: none;
+  }
+
+  .hyrule-card-wrapper {
+    /* flex-shrink: 0; */
+    /* scroll-snap-align: center; */
+    transition: transform 0.3s ease;
+  }
+
+  .hyrule-card-wrapper.active {
+    transform: scale(1.09);
+    z-index: 2;
+  }
+
+  .hyrule-cards__textbox {
+    margin-top: 4rem;
+    text-align: center;
+  }
 }
-
