--- a/src/components/store-main/StoreMain.css
+++ b/src/components/store-main/StoreMain.css
@@ -43,6 +43,9 @@
 }
 
     @media (max-width: 764px) {
+        .store-page {
+            margin-top: 10rem;
+        }
         .store-main {
             display: flex;
             overflow-x: auto;
