--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ h1,h2,h3,h4,h5,p,span {
   margin: 0;
 }
 
+p, span, button {
+  font-family: 'Geist';
+}
+
 a {
   text-decoration: none;
   padding: 0 !important;
@@ -27,9 +31,15 @@ a {
   src: url("./fonts/the-wild-breath-of-zelda.ttf");
 }
 
+@font-face {
+  font-family: "Geist";
+  src: url("./fonts/Geist-Regular.ttf");
+}
+
 body {
   margin: 40px 60px;
   padding: 0;
+  font-family: 'Geist';
 }
 
 @media (min-width: 990px) and (max-width: 1439px) {
