--- a/src/components/hyrule-card/hyruleCard.css
+++ b/src/components/hyrule-card/hyruleCard.css
@@ -228,3 +228,17 @@
     border-radius: 0;
     pointer-events: none !important;
 }
+
+/* Animations efects */
+
+.glow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  border-radius: 8px;
+  background: radial-gradient(circle at center, rgba(238, 203, 8, 0.226), transparent 20%);
+  filter: blur(20px);
+  transition: transform 0.05s ease-out;
+  z-index: 1;
+}
