--- a/src/components/filters/filters.css
+++ b/src/components/filters/filters.css
@@ -11,6 +11,18 @@
     gap: 60px;
 }
 
+.filters.hidden {
+  transform: translateY(-100%);
+  opacity: 0;
+  transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+}
+
+.filters.visible {
+  transform: translateY(0);
+  opacity: 1;
+  transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+}
+
 .filters-buttons {
     display: flex;
     gap: 20px;
