--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,7 @@ header {
   grid-template-columns: 1fr 3fr;
   align-items: center;
   padding: 25px 80px;
-  background: rgb(14, 40, 61);
+   background: radial-gradient(circle, #16334b, #000000);
   gap: 6px;
   transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
   will-change: transform;
@@ -64,7 +64,7 @@ nav a.active {
 
 .user-money p {
   color: #FFFFFF;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 /* ---------------- MOBILE STYLES ---------------- */
