--- a/src/components/hyrule-card/hyruleCard.css
+++ b/src/components/hyrule-card/hyruleCard.css
@@ -136,11 +136,17 @@
     text-shadow: 0px 0px 3px #5BB3FB;
     font-style: normal;
     line-height: 0.8rem;
+    display: -webkit-box;
 }
 
 .hyrule-card__description p {
     margin-block: 0.2rem;
     font-size: 0.5rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .hyrule-card__section h3 {
@@ -162,8 +168,13 @@
     text-align: center;
     text-shadow: 0px 0px 3px #5BB3FB;
     font-style: normal;
-    line-height: 0.8rem;
+    line-height: 4px;
     margin: 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .hyrule-card__footer {
@@ -232,7 +243,10 @@
     }
 
     body:not(.slider-page) .hyrule-card__image {
-        height: 4.0rem;
+        height: 5.1rem;
+        width: 95%;
+        border-radius: 2px;
+        margin-top: -8px;
     }
 
     body:not(.slider-page) .hyrule-card__header {
@@ -240,17 +254,17 @@
     }
     body:not(.slider-page) .hyrule-card__header .h2 {
         font-size: 7px;
-        line-height: 1px;
+        line-height: 0;
     }
     body:not(.slider-page) .hyrule-card__points {
         font-size: 4px;
     }
     body:not(.slider-page) .hyrule-card__icon {
-        width: 7px;
+        width: 6px;
     }
 
     body:not(.slider-page) .hyrule-card__description {
-        line-height: 6px;
+        line-height: 4px;
     }
     body:not(.slider-page) .hyrule-card__description p {
         font-size: 3px;
@@ -267,5 +281,11 @@
     body:not(.slider-page) .hyrule-card__footer {
         padding-top: 3px;
         font-size: 4px;
+    }
+
+    body:not(.slider-page) .hyrule-card__content__info {
+        display: flex;
+        flex-direction: column;
+        gap: 3px;
     }
 }
