--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@ body {
   margin: 40px 60px;
   padding: 0;
   font-family: 'Geist';
+  min-height: calc(100vh - 48px);
 }
 
 @media (min-width: 990px) and (max-width: 1439px) {
