fix: hot fix footer

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,24 +1,10 @@
-/*ELEMENTOS NECESARIOS PARA QUE EL FOOTER ESTE ABAJO*/
-/* {
-  margin: 0;
-  box-sizing: border-box;
-  font-family: Geist;
-}
-body {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  min-height: 100vh;
-}*/
+
 .footer {
   color: white;
-  width: 100%;
-  position: relative;
-  padding: 25px 4vw 20px;
+  padding: 20px 36px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between; 
   align-items: center;
-  gap: 52.76vw; /* espacio entre copyright y bloque de links */
 }
 
 /* Espacio entre cada link dentro del bloque */
@@ -28,11 +14,38 @@ body {
 }
 
 .footerLink {
-  font-size: 16px;
+  font-size: 10px;
   text-decoration: none;
   color: white;
 }
 
 .copyRight {
-  font-size: 16px;
+  font-size: 12px;
+}
+
+
+@media (max-width: 1124px) {
+  .footer {
+    flex-direction: column;       
+    align-items: center;          
+    padding: 40px 20px;           
+    gap: 20px;                   
+  }
+
+  .footerLinks {
+    gap: 16px;                   
+    justify-content: center;     
+    width: 100%;                 
+    font-size: 10px;
+  }
+
+  .footerLink {
+  font-size: 10px;
+  text-decoration: none;
+  color: white;
+  }
+
+  .copyRight {
+    font-size: 10px;             
+  }
 }
