--- a/src/components/firebase/user-profile/UserProfileEditor.module.css
+++ b/src/components/firebase/user-profile/UserProfileEditor.module.css
@@ -4,8 +4,9 @@
   flex-direction: column;
   align-items: center;
   padding-top: 48px; /* distancia desde el header */
-  min-height: 100vh;
   gap: 20px; /* separación general entre bloques si lo deseas */
+  bottom: 0;
+  left: 0;
 }
 
 /*===IMAGEN PERFIL USUARIO===*/
