--- a/src/index.css
+++ b/src/index.css
@@ -46,31 +46,33 @@ a {
   font-family: "Geist";
   src: url("./fonts/Geist-Regular.ttf");
 }
-
-body {
-  margin: 40px 60px;
-  padding: 0;
-  font-family: 'Geist';
-  min-height: calc(100vh - 48px);
+body{
+  margin: 0;
+}
+#root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: space-between;
 }
 
 @media (min-width: 990px) and (max-width: 1439px) {
-  body {
-    margin: 25px 40px;
+  #root {
+    margin: 0 40px;
     padding: 0;
   }
 }
 
 @media (min-width: 749px) and (max-width: 989px) {
-  body {
-    margin: 12px 16px;
+  #root {
+    margin: 0 16px;
     padding: 0;
   }
 }
 
 @media (max-width: 749px) {
-  body {
-    margin: 12px 16px;
+  #root {
+    margin: 0 16px;
     padding: 0;
     overflow-x: hidden;
     box-sizing: border-box;
