--- a/src/components/hyrule-card/hyruleCard.css
+++ b/src/components/hyrule-card/hyruleCard.css
@@ -238,6 +238,24 @@
     body:not(.slider-page) .hyrule-card__image {
         height: 7rem;
     }
+
+    body:not(.slider-page) .hyrule-card__description p {
+        font-size: 4px;
+        margin-bottom: 3px;
+        line-height: 7px;
+    }
+
+     body:not(.slider-page) .hyrule-card__section h3 {
+        padding-top: 0.1rem;
+        padding-bottom: 0.1rem;
+        font-size: 8px;
+    }
+
+    body:not(.slider-page) .hyrule-card__section p {
+        line-height: 6px;
+        font-size: 4px;
+        padding-bottom: 1px;
+    }
 }
 
 @media (max-width: 550px) {
@@ -251,7 +269,7 @@
         width: calc(100% - 5px);
         height: calc(100% - 5px);
         border-radius: 0.2rem;
-            padding: 0.2rem 0.4rem;
+        padding: 0.2rem 0.4rem;
     }
 
     body:not(.slider-page) .hyrule-card__content__frame {
@@ -270,6 +288,7 @@
 
     body:not(.slider-page) .hyrule-card__header {
         margin-top: 2px;
+        margin-bottom: 6px;
     }
     body:not(.slider-page) .hyrule-card__header .h2 {
         font-size: 7px;
@@ -287,14 +306,18 @@
     }
     body:not(.slider-page) .hyrule-card__description p {
         font-size: 3px;
+        line-height: 6px;
+        margin-bottom: 0;
+        margin-top: 3px;
     }
     body:not(.slider-page) .hyrule-card__section h3 {
-        font-size: 6px;
+        font-size: 5px;
         padding-top: 1px;
-        line-height: 0.9;
+        line-height: 0.2rem;
     }
     body:not(.slider-page) .hyrule-card__section p {
         font-size: 3px;
+        margin-bottom: 0;
     }
 
     body:not(.slider-page) .hyrule-card__footer {
@@ -306,5 +329,11 @@
         display: flex;
         flex-direction: column;
         gap: 3px;
+    }
+
+    body:not(.slider-page) .hyrule-card__image {
+        width: 100%;
+        aspect-ratio: 63/40;
+        margin-bottom: 3px;
     }
 }
