feature: responsive footer

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,7 +1,7 @@
 
 .footer {
   color: white;
-  padding: 20px 36px;
+  padding: 42px 36px 20px 36px;
   display: flex;
   justify-content: space-between; 
   align-items: center;
