feature: btn logout and responsive

--- a/src/components/firebase/register/registerForm.css
+++ b/src/components/firebase/register/registerForm.css
@@ -36,7 +36,19 @@
   gap: 28px;;
 }
 
+.register-input input {
+    padding: 10px 0;
+    text-transform: none;
+    width:auto;
+}
+
 .register-form-container {
   display: flex;
   justify-content: center;
+}
+
+@media (max-width: 749px) {
+  .register-logo__img {
+    max-width: 300px;
+  }
 }
