--- a/src/components/firebase/user-profile/UserProfileEditor.module.css
+++ b/src/components/firebase/user-profile/UserProfileEditor.module.css
@@ -118,6 +118,11 @@ input {
   height: calc(30% - 1px);
 }
 
+.btnlogoutsave {
+  display: flex;
+  gap: 28px;
+}
+
 @media (max-width: 768px) {
   .inputTextCardOneLiner {
     width: 90%;
