--- a/src/views/LandingPage/LandingPage.css
+++ b/src/views/LandingPage/LandingPage.css
@@ -37,3 +37,122 @@ header {
   font-weight: 500;
   line-height: 120%; /* 24px */
 }
+/*CONTENEDORES*/
+.container-callToaction--with-button {
+  overflow: visible;
+  width: 1154px;
+  height: 444px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  gap: 0px 16px;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+  /*overflow: hidden; /* evita que algo se salga visualmente */
+  margin: 0 auto; /* centrado horizontal */
+}
+
+.call-to-action-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.call-to-action-text {
+  max-width: 500px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.call-to-action-text h2 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 0.3rem 0;
+  white-space: nowrap;
+}
+
+.call-to-action-text h2 span {
+  display: inline;
+}
+
+.call-to-action-text .highlight-blue {
+  color: #7cd2ff;
+}
+
+.call-to-action-text .highlight-golden {
+  color: #e0cea0;
+}
+.call-to-action-text .highlight-purple {
+  color: #ba6ed5;
+}
+
+.call-to-action-text p {
+  line-height: 1.6;
+  margin: 1rem 0;
+}
+
+.call-to-action-image-blue img {
+  max-width: 750px;
+  height: auto;
+  filter: drop-shadow(0 0 15px #7cd2ff);
+}
+.call-to-action-image-golden img {
+  max-width: 750px;
+  height: auto;
+  filter: drop-shadow(0 0 15px #e0cea0);
+}
+.call-to-action-image-purple img {
+  max-width: 750px;
+  height: auto;
+  filter: drop-shadow(0 0 15px #ba6ed5);
+}
+
+.card-container-text-blue {
+  color: #7cd2ff;
+
+  text-align: center;
+  font-family: Geist;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+  width: 501px;
+  height: 104px;
+}
+.card-container-text-golden {
+  color: #e0cea0;
+
+  text-align: center;
+  font-family: Geist;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+  width: 501px;
+  height: 104px;
+}
+.card-container-text-purple {
+  color: #ffffff;
+
+  text-align: center;
+  font-family: Geist;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+  width: 501px;
+  height: 104px;
+}
