--- a/src/components/hyrule-card/hyruleCard.css
+++ b/src/components/hyrule-card/hyruleCard.css
@@ -62,8 +62,8 @@
 
 .hyrule-card__icon {
     padding-left: 0.2rem;
-    width: 1rem;
-    height: auto;
+    width: 2rem;
+    height: 2;
     margin-bottom: -0;
 }
 
