--- a/src/views/collection/DecksPage.css
+++ b/src/views/collection/DecksPage.css
@@ -121,3 +121,11 @@
     gap: 1rem;
   }
 }
+
+@media (hover: none) {
+  .deck-button:active img,
+  .deck-preview:active {
+    transform: scale(1.05);
+    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.3);
+  }
+}
