--- a/src/components/firebase/user-profile/UserProfileEditor.module.css
+++ b/src/components/firebase/user-profile/UserProfileEditor.module.css
@@ -1,11 +1,11 @@
 /*===CONTENEDOR DE LA PAGINA==*/
 .containerProfile {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 48px; /* distancia desde el header */
-  min-height: 100vh;
-  gap: 20px; /* separación general entre bloques si lo deseas */
+  padding-top: 48px;
+  gap: 20px;
 }
 
 /*===IMAGEN PERFIL USUARIO===*/
@@ -155,4 +155,10 @@ input {
   input {
     font-size: 13px;
   }
+}
+/*ESENCIAL PARA QUE EL FOOTER FUNCIONE BIEN*/
+.display-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
