--- a/src/views/LandingPage/LandingPage.css
+++ b/src/views/LandingPage/LandingPage.css
@@ -36,13 +36,13 @@
   flex-direction: column;
 }
 /*HEADER*/
-header {
+.header-landing {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 60px;
   background-color: #f5f5f5;
-  position: relative;
+  position: sticky;
 }
 .header-content {
   display: flex;
