--- a/src/components/firebase/user-profile/UserProfileEditor.module.css
+++ b/src/components/firebase/user-profile/UserProfileEditor.module.css
@@ -6,6 +6,8 @@
   align-items: center;
   padding-top: 48px;
   gap: 20px;
+  bottom: 0;
+  left: 0;
 }
 
 /*===IMAGEN PERFIL USUARIO===*/
@@ -161,4 +163,9 @@ input {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+.btnlogoutsave {
+  display: flex;
+  gap: 28px;
 }
