--- a/src/views/collection/DecksPage.css
+++ b/src/views/collection/DecksPage.css
@@ -129,3 +129,11 @@
     box-shadow: 0 3px 9px rgba(0, 0, 0, 0.3);
   }
 }
+
+@media (max-width: 1123px) {
+  .collection-page__decks {
+    margin: 0 auto;
+    justify-content: center;
+    padding: 0 2rem; /* opcional: margen interno */
+  }
+}
