--- a/src/views/LandingPage/LandingPage.css
+++ b/src/views/LandingPage/LandingPage.css
@@ -43,9 +43,9 @@
   align-items: center;
   height: 60px;
   background-color: #f5f5f5;
-  position: sticky;
+  position: relative;
 }
-.header-content {
+.header-content-landing {
   display: flex;
   align-items: center;
   gap: 40px; /* espacio entre logo y botón */
@@ -79,33 +79,38 @@
   line-height: 120%; /* 24px */
 }
 /*CONTENEDORES*/
-.container-golden--blue {
-  padding-right: 300px;
+
+.card.container-callToaction--with-button .card-content {
+  padding: 7rem 3.8rem;
+  height: 430px;
 }
-.container-golden--position {
-  padding-left: 300px;
-  padding-bottom: 96px;
-  padding-top: 96px;
+
+.container--position + .container--position {
+  margin-top: 9rem;
 }
-.container-golden--purple {
-  padding-right: 300px;
-  padding-bottom: 96px;
+
+.container--position {
+  margin-left: 10%;
+  margin-right: 30%;
 }
+
+.container--position.right {
+  margin-left: 30%;
+  margin-right: 10%;
+}
+
 .container-callToaction--with-button {
   overflow: visible;
-  width: 1154px;
-  height: 444px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: center;
-  flex-wrap: wrap;
   gap: 0px 16px;
   color: white;
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
-  /*overflow: hidden; /* evita que algo se salga visualmente */
-  margin: 0 auto; /* centrado horizontal */
+  margin: 0 auto;
 }
 
 .call-to-action-content {
@@ -113,37 +118,27 @@
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  flex-wrap: wrap;
   width: 100%;
-  max-width: 100%;
   height: 100%;
   box-sizing: border-box;
 }
 
-.btn-placement {
-  padding-left: 130px;
-}
-
 .call-to-action-text {
-  max-width: 500px;
-  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start; /* ← importante: texto alineado al inicio */
-  text-align: left;
+  align-items: center; 
   gap: 16px;
   box-sizing: border-box;
-  padding-left: 30px;
 }
 
 .call-to-action-text h2 {
-  font-size: 40px;
+  font-size: 4rem;
   font-weight: 400;
-  font-family: 'The Wild Breath of Zelda', serif;
   margin: 0;
   line-height: 1.2;
   white-space: normal;
   word-break: break-word;
+  text-align: center;
 }
 
 .call-to-action-text h2 span {
@@ -166,58 +161,46 @@
   margin: 1rem 0;
 }
 
-.call-to-action-image-blue img {
-  max-width: 750px;
-  height: auto;
-  filter: drop-shadow(0 0 15px #7cd2ff);
-}
-.call-to-action-image-golden img {
-  max-width: 750px;
-  height: auto;
-  filter: drop-shadow(0 0 15px #e0cea0);
-}
-.call-to-action-image-purple img {
-  max-width: 750px;
-  height: auto;
-  filter: drop-shadow(0 0 15px #ba6ed5);
+.call-to-action-image,
+.call-to-action-text {
+  width: 50%;
 }
 
-.card-container-text-blue {
-  color: #7cd2ff;
+.call-to-action-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.call-to-action-image img {
+  width: 60%;
+  height: auto;
+  filter: drop-shadow(0 0 40px #7cd2ff);
+}
+.call-to-action-image.golden img {
+  filter: drop-shadow(0 0 40px #e0cea0);
+}
+.call-to-action-image.purple img {
+  filter: drop-shadow(0 0 40px #ba6ed5);
+}
+
+.card-container-text {
   text-align: center;
   font-family: Geist;
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
-  line-height: 130%;
-  width: 501px;
-  height: 104px;
+  color: white;
 }
-.card-container-text-golden {
-  color: #e0cea0;
-
-  text-align: center;
-  font-family: Geist;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 130%;
-  width: 501px;
-  height: 104px;
-}
-.card-container-text-purple {
-  color: #ffffff;
-
-  text-align: center;
-  font-family: Geist;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 130%;
-  width: 501px;
-  height: 104px;
-}
+  .card-container-text.blue {
+    color: #7cd2ff;
+  }
+  .card-container-text.golden {
+    color: #e0cea0;
+  }
+  .card-container-text.golden {
+    color: #e0cea0;
+  }
 
 @media (max-width: 768px) {
   .container-callToaction--with-button {
@@ -239,14 +222,6 @@
     padding-left: 0;
     align-items: center;
     text-align: center;
-  }
-
-  .call-to-action-text h2 {
-    text-align: center;
-  }
-
-  .btn-placement {
-    padding-left: 0;
   }
 
   .card-container-text-blue,
